# PixelBank

./: .gitignore  Cargo.toml
.github/workflows/: build_and_test_server.yml  fmt.yml
backend/: api-spec-1.0.yaml
backend/lib/: backend.dart
backend/lib/api/: user.dart
backend/test/: backend_test.dart
migrations/2023-04-08-202109_users/: up.sql
migrations/2023-05-03-093715_create_transactions/: up.sql
server/: .env.example  .gitignore  .profile  Cargo.toml  api-spec-1.0.yaml  bacon.toml  configuration.yml  products.yml
server/migrations/2023-03-22-215605_users/: up.sql
server/migrations/2023-04-08-202109_users/: up.sql
server/migrations/2023-05-03-093715_create_transactions/: up.sql
server/migrations/2023-05-03-161023_products/: up.sql
server/src/: api_doc.rs  configuration.rs  constants.rs  lib.rs  main.rs  response.rs  schema.rs  startup.rs  user.rs
server/src/database/: database.rs
server/src/models/: api_error.rs  mod.rs  product.rs  transaction.rs  user.rs
server/src/routes/: mod.rs  ping.rs  ping_controller.rs  product.rs  transaction_controller.rs  user.rs  user_controller.rs
server/src/schemas/: mod.rs  transaction_schemas.rs  user_schemas.rs
server/tests/: get_user_transactions.rs  health_check.rs  ping.rs  test_context.rs  transaction_create.rs  transactions_create.rs  transactions_get.rs  user.rs  user_create.rs  user_get.rs
shell/: pubspec.yaml
shell/lib/: ansi_colors.dart  command.dart
shell/test/: shell_test.dart
src/routes/: ping_controller.rs  transaction_controller.rs
tests/: ping.rs  test_context.rs  transactions_get.rs  user_get.rs
