[package]
name = "server"
version = "0.1.0"
authors = ["NinjaLikesCheez <NinjaLikesCheez@pixelbar>"]
edition = "2021"

[lib]
path = "src/lib.rs"

[[bin]]
path = "src/main.rs"
name = "server"

[dependencies]
actix-rt = "2.8.0"
actix-web = "4.3.1"
chrono = { version = "0.4.24", features = ["serde"] }
env_logger = "0.10.0"
serde = { version = "1.0.158", features = ["derive"] }
serde_json = "1.0.94"
uuid = { version = "1.3.0", features = ["serde", "v4"] }
diesel = { version = "2.0.0", features = ["sqlite", "r2d2", "serde_json"] }
dotenvy = "0.15"
# r2d2 = "0.8.10"
# r2d2-diesel = "1.0.0"
