[package]
name = "server"
version = "0.1.0"
authors = ["NinjaLikesCheez <NinjaLikesCheez@pixelbar>"]
edition = "2021"

[lib]
path = "src/lib.rs"

[[bin]]
path = "src/main.rs"
name = "server"

[dev-dependencies]
reqwest = { version = "0.11.15", features = ["json"] }

[dependencies]
actix-rt = "2.8.0"
actix-web = "4.3.1"
chrono = { version = "0.4.24", features = ["serde"] }
env_logger = "0.10.0"
serde = { version = "1.0.158", features = ["derive"] }
serde_json = "1.0.94"
uuid = { version = "1.3.0", features = ["serde", "v4"] }
diesel = { version = "2.0.0", features = ["sqlite", "r2d2", "serde_json"] }
dotenvy = "0.15"
tokio = { version = "1.26.0", features = ["macros", "rt-multi-thread"] }
config = "0.13.3"
derive_more = "0.99.17"
diesel_migrations = "2.0.0"
log = "0.4.18"
pretty_env_logger = "0.5.0"
utoipa = { version = "3", features = ["actix_extras", "yaml"] }
utoipa-swagger-ui = { version="3.1.3", features = ["actix-web"] }